Fixed a 'bug' in refs. Holy shit, i am not allowed to define month after year. This kills the biber

--- a/thesis/essay_kladd.tex
+++ b/thesis/essay_kladd.tex
@@ -103,7 +103,7 @@ During the introduction of this essay the properties of GPS as a tool for naviga
 Alright, but what about time? We have already established that the key to GPS is measuring the travel time of a radio signal, but considering the consequences of a couple of microseconds of slack when dealing with light-speed, it is really putting some pressure on the GPS receivers internal clocks. As previously mentioned, all your receiver needs to do to find its position in a three dimensional space, is three GPS satellites. If the GPS receivers internal clocks where perfect, the three satellite ranges would intersect at a single point, your position. But in the real world our clocks is everything but perfect. One could use atomic clocks  in the receivers but that would make the receivers too expensive (even though chip scale atomic clocks (CSAC) are becoming increasingly affordable \ref{op}) for anyone to buy. The solution is to make a fourth measurement from a fourth satellite. This measurement will not intersect with the first three when using an imperfect clock. The receiver can then try to find a correction factor it can subtract from its timing measurement in order to make the measurements intersect. By doing this, it also brings the receivers clock back to sync with universal time. With the correct time, it can also make correct and precise positioning. \cite{TRIMBLETIME}
 
 \section{Phasor Measurement Units}
-An example of an application relying on GPS derived time is a PMU (phasor measurement unit).A PMU analyzes the waves on the electrical grid and uses a common time source for synchronization. This synchronization allows for real-time measurements between multiple points in the grid by multiple PMU's. The common time source (and why PMU's are relevant) is often obtained by using GPS. \cite{YLJRNR} The value of such a device is understood clearer by recognizing that the power grid is a complex, interconnected, interdependent network. In other words, errors and abnormalities in one part of the grid will have an effect on operation elsewhere and in some cases lead to whole spread blackouts \cite{EVPMUGA}.
+An example of an application relying on GPS derived time is a PMU (phasor measurement unit).A PMU analyzes the waves on the electrical grid and uses a common time source for synchronization. This synchronization allows for real-time measurements between multiple points in the grid by multiple PMU's. The common time source (and why PMU's are relevant) is often obtained by using GPS. \cite{ylyl} The value of such a device is understood clearer by recognizing that the power grid is a complex, interconnected, interdependent network. In other words, errors and abnormalities in one part of the grid will have an effect on operation elsewhere and in some cases lead to whole spread blackouts \cite{EVPMUGA}.
 
 \section{Threat Models and countermeasures}
 The thread models and countermeasures presented in this paper are based on the article \textit{Reliable GPS-Based Timing for Power Systems: A Multi-Layered, Multi Receiver} by L. Heng, D. Chou and G. Xingxin Gao (2012). The only exception is our proposed countermeasure under \ref{op}.
