--- a/thesis/refs.bib
+++ b/thesis/refs.bib
@@ -66,13 +66,6 @@
   year = 2010 
 } 
 
-@article{YLJRNR,
-  author    = "Yilu Liu and Lamine Mili and Jaime De La Ree and Reynaldo Francisco Nuqui and Reynaldo Francisco Nuqui",
-  title     = "State Estimation and Voltage Security Monitoring Using Synchronized Phasor Measurement",
-  year      = "2001",
-  month    = "July"
-}
-
 @misc{HP,
   author = "Carl R. Nave",
   title = {HyperPhysics},
@@ -112,4 +105,11 @@
   title = {SA.45s CSAC Data sheet},
   howpublished = {\url{http://www.chronos.co.uk/files/pdfs/mic/sa.45s.pdf}},
   note = {Accessed: 2-7-2015}
+}
+
+@article{ylyl,
+  author    = "Yilu Liu and Lamine Mili and Jaime De La Ree and Reynaldo Francisco Nuqui and Reynaldo Francisco Nuqui",
+  title     = "State Estimation and Voltage Security Monitoring Using Synchronized Phasor Measurement",
+  note = {Accessed: 2-7-2015},
+  year      = 2001
 }
