Added csac logger graphic

--- a/thesis/appendix.tex
+++ b/thesis/appendix.tex
@@ -3,7 +3,7 @@
 \begin{appendices}
 \section{CSAC data acquisition}
 \subsection{Program}\label{CL}
-\lstinputlisting[language=Python]{./source_files/csac_logger.py}
+	\lstinputlisting[language=Python]{./source_files/csac_logger.py}
 \subsection{Schematic}\label{CLS}
-
+	 \includegraphics[scale=0.5]{csac_logger.pdf}
 \end{appendices}
